Fix some layout issues and reader issues

--- a/src/main/webapp/components/g-progress-status/g-progress-status.less
+++ b/src/main/webapp/components/g-progress-status/g-progress-status.less
@@ -6,3 +6,5 @@ g-progress-status { width: 100%;
 		    flex-direction: column;
 		    justify-content: center;
 		    background-image: linear-gradient(to bottom, #FDFAE9 0%, #B3B0A4 100%);}
+
+g-progress-status > div > ul { cursor: pointer }
